--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "static",
-  "outputDirectory": "frontend",
-  "rootDirectory": "frontend",
+  "outputDirectory": ".",
   "cleanUrls": true,
   "trailingSlash": false,
   "headers": [
@@ -16,13 +15,6 @@
           "value": "public, max-age=3600, s-maxage=3600"
         }
       ]
-    }
-  ],
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/index.html",
-      "permanent": false
     }
   ],
   "rewrites": [
