--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
-  "buildCommand": "cd frontend && echo 'Frontend build complete'",
   "outputDirectory": "frontend",
   "installCommand": "pip install -r backend/requirements.txt",
+  "functions": {
+    "backend/api/**/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/backend/api/:path*"
+      "source": "/api/config",
+      "destination": "/backend/api/config.py"
     }
   ]
 }
